Update all the docs
