# src/entity/entity-routes.js
@@ -7,7 +7,11 @@ const router = express.Router();
 
 router.get("/:entityId/progress/:goalId", async (request, response) => {
 
-    const entity = await getEntityProgressTowardsGoals(request.params.entityId, request.params.goalId);
+    const goalParams = {
+        goalId: request.params.goalId
+    };
+
+    const entity = await getEntityProgressTowardsGoals(request.params.entityId, goalParams);
     if (entity) {
         response.status(200).send(entity);
     } else {
@@ -17,7 +21,11 @@ router.get("/:entityId/progress/:goalId", async (request, response) => {
 
 router.get("/:entityId/progress/", async (request, response) => {
 
-    const entity = await getEntityProgressTowardsGoals(request.params.entityId);
+    const goalParams = {
+        onlyComplete: request.query.onlyComplete
+    };
+
+    const entity = await getEntityProgressTowardsGoals(request.params.entityId, goalParams);
     if (entity) {
         response.status(200).send(entity);
     } else {
